# fourier

./: README.md  RESULTS.md  a_matrix_2_1.py  a_matrix_circuit.py  batch_generate.py  benchmark_circuit.py  brickwork_bqskit.py  brickwork_synth.py  check_block_rotation.py  check_block_rotation_3qubit.py  check_commute_with_swap.py  check_gate_equivalence.py  check_householder.py  commutant_heuristic.py  compile_benchmark.py  compile_cz_series.py  compile_q_matrices.py  compile_ry_z_cnot.py  compile_u3_cry_counts.py  compute_a_matrix_2_1.py  compute_ab_theorem.py  compute_matrix.py  cs_subblock_test.py  decompose_a_matrix.py  exhaustive_reduce.py  flagsynth_amatrix.py  generate_data.py  generate_weyl.py  givens_zero_first_column.py  graph_a_matrix.py  helper.py  hook_guided_reduce.py  main.py  match_aprime_diagram.py  matchgate_scan.py  mixing_test.py  play.ipynb  plot_F_family.py  plot_ac_family_weyl.py  plot_all_families_weyl.py  (+35 more)
data/: 4_addable_size_10_u3_cnot.csv  4_addable_size_11_u3_cnot.csv  4_addable_size_12_u3_cnot.csv  4_addable_size_13_u3_cnot.csv  4_addable_size_14_u3_cnot.csv  4_addable_size_15_u3_cnot.csv  4_addable_size_16_u3_cnot.csv  4_addable_size_17_u3_cnot.csv  4_addable_size_18_u3_cnot.csv  4_addable_size_19_u3_cnot.csv  4_addable_size_20_u3_cnot.csv  4_addable_size_21_u3_cnot.csv  4_addable_size_22_u3_cnot.csv  4_addable_size_23_u3_cnot.csv  4_addable_size_6_u3_cnot.csv  4_addable_size_7_u3_cnot.csv  4_addable_size_8_u3_cnot.csv  4_addable_size_9_u3_cnot.csv  ac_family_weyl.csv  cauchy_opcounts.csv  compile_benchmark.csv  cs_subblock_match.csv  (+16 more)
(+44 files in other folders)
