[project]
name = "fourier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "yungdiagram @ git+https://github.com/natestemen/yungDiagram.git",
    "numpy",
    "bqskit[ext]",
    "qiskit",
    "pandas",
    "matplotlib",
    "ipympl",
    "plotly",
    "sympy",
    "flagsynth",
]

[tool.uv.sources]
flagsynth = { git = "ssh://git@github.com/XanaduAI/flagsynth.git" }
