[project]
name = "fourier"
version = "0.1.0"
description = "Circuit decompositions of A-matrices from the symmetric-group branching rule (QFT on S_n)"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "yungdiagram @ git+https://github.com/natestemen/yungDiagram.git",
    "numpy",
    "scipy",
    "bqskit[ext]",
    "qiskit",
    "pandas",
    "matplotlib",
    "ipympl",
    "plotly",
    "sympy",
    "flagsynth",
]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fourier"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
flagsynth = { git = "ssh://git@github.com/XanaduAI/flagsynth.git" }

[tool.pytest.ini_options]
testpaths = ["tests"]
